move reveal to scss, fix text area overflow, modal overflow, playing with another breakpoint for portfolio

--- a/app/styles/components/_modules/_contact.scss
+++ b/app/styles/components/_modules/_contact.scss
@@ -48,7 +48,6 @@
     width: 100%;
     height: 250px;
     resize: none;
-    padding: 0.3em;
     &:focus, &:active {
       outline: none;
     }
