--- a/app/styles/components/_utils.scss
+++ b/app/styles/components/_utils.scss
@@ -12,6 +12,7 @@
   // Defining breakpoints
   $medium: 620px !default;
   $wide: 800px !default;
+  $wider: 1080px !default;
   $huge: 1600px !default;
   $mediumContainer: 688px !default;
   $wideContainer: 864px !default;
@@ -47,7 +48,7 @@
   $colorGray: #737373 !default;
   $colorGrayLight: #eeeeee !default;
   $colorGrayDark: #404040 !default;
-  
+
   // Grey-scales
   $colorBlack: #111111 !default;
   // $colorGrayLight: #CFD0CC !default;
