--- a/app/styles/components/components.css
+++ b/app/styles/components/components.css
@@ -2496,6 +2496,16 @@ cf()
   top: 0;
   left: 0;
 }
+#nav-dropdown a {
+  *zoom: 1;
+}
+#nav-dropdown a:before, #nav-dropdown a:after {
+  content: '';
+  display: table;
+}
+#nav-dropdown a:after {
+  clear: both;
+}
 
 .nav-mk__icon {
   position: fixed;
@@ -2598,21 +2608,23 @@ cf()
   padding: 0;
   margin: auto;
   font-size: 26px;
+  font-style: italic;
 }
 .nav-drawer__list li {
-  padding: 5% 0 5% 5%;
+  padding: 5% 0 5% 0;
   list-style: none;
   text-align: center;
 }
 .nav-drawer__list li:hover {
   background-color: white;
-  color: white;
+  color: #111111;
+}
+.nav-drawer__list li:hover a {
+  color: #111111;
 }
 .nav-drawer__list li a, .nav-drawer__list li a:visited {
   text-decoration: none;
-}
-.nav-drawer__list li a:hover {
-  color: #111111;
+  color: #737373;
 }
 
 @media only screen and (max-width: 620px) {
@@ -2713,6 +2725,45 @@ cf()
           transform: translateY(0%);
 }
 
+@media only screen and (max-width: 1080px) {
+  .portfolio__work {
+    display: inline;
+    clear: none;
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: left;
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    padding-left: 0;
+    padding-right: 0;
+    width: 48.5%;
+    margin-left: 0%;
+    margin-right: 3%;
+  }
+  .portfolio__work:first-child {
+    margin-left: 0;
+  }
+  .portfolio__work:last-child {
+    margin-right: 0;
+  }
+  .portfolio__work:before, .portfolio__work:after {
+    content: '';
+    display: table;
+  }
+  .portfolio__work:after {
+    clear: both;
+  }
+  .portfolio__work:nth-child(2n) {
+    margin-right: 0%;
+    float: right;
+  }
+  .portfolio__work:nth-child(2n + 1) {
+    clear: both;
+  }
+}
 @media only screen and (max-width: 620px) {
   .portfolio__work {
     display: block;
@@ -2861,7 +2912,6 @@ footer {
   width: 100%;
   height: 250px;
   resize: none;
-  padding: 0.3em;
 }
 .contact__form textarea:focus, .contact__form textarea:active {
   outline: none;
@@ -2952,6 +3002,69 @@ footer {
     margin: auto;
   }
 }
+/*	--------------------------------------------------
+  Reveal Modals
+  -------------------------------------------------- */
+.reveal-modal-bg {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: #000;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 100;
+  display: none;
+  top: 0;
+  left: 0;
+}
+
+.reveal-modal {
+  visibility: hidden;
+  top: 100px;
+  left: 50%;
+  margin-left: -300px;
+  background: #eee;
+  /*url(modal-gloss.png) no-repeat -200px -80px;*/
+  position: absolute;
+  z-index: 101;
+  padding: 30px 40px 34px;
+  border-radius: 5px;
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  -box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+
+.reveal-modal.small {
+  width: 200px;
+  margin-left: -140px;
+}
+
+.reveal-modal.medium {
+  width: 400px;
+  margin-left: -240px;
+}
+
+.reveal-modal.large {
+  width: 600px;
+  margin-left: -340px;
+}
+
+.reveal-modal.xlarge {
+  width: 800px;
+  margin-left: -440px;
+}
+
+.reveal-modal .close-reveal-modal {
+  font-size: 22px;
+  line-height: .5;
+  position: absolute;
+  top: 8px;
+  right: 11px;
+  color: #aaa;
+  text-shadow: 0 -1px 1px rbga(0, 0, 0, 0.6);
+  font-weight: bold;
+  cursor: pointer;
+}
+
 /**
 *
 * Button
